# capricci-backend

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  manage.py  pyproject.toml  render.yaml
config/: api.py  storages.py
config/settings/: local.py  production.py
src/commons/: models.py  schemas.py
src/content/: admin.py  apps.py
src/content/controllers/: __init__.py  product.py
src/content/management/commands/: create_random_products.py
src/content/migrations/: 0001_initial.py
src/content/schemas/: __init__.py  product.py
src/content/signals/receivers/: __init__.py  remove_image_from_s3.py  update_rating_and_num_reviews.py
src/content/use_cases/: __init__.py  update_rating_and_reviews_number_use_case.py
src/crm/: admin.py  apps.py
src/crm/controllers/: __init__.py  review.py
src/crm/management/commands/: create_random_reviews.py
src/crm/migrations/: 0001_initial.py  0002_initial.py
src/crm/models/: review.py
src/crm/schemas/: __init__.py  review.py
src/customer/: admin.py  apps.py
src/customer/controllers/: __init__.py  address.py  customer.py
src/customer/migrations/: 0001_initial.py  0002_remove_customer_username.py  0003_alter_customer_password_alter_customer_points.py  0004_customer_unique_email.py
src/customer/models/: __init__.py  address.py  customer.py
src/customer/schemas/: __init__.py  address.py  customer.py
src/iam/: admin.py  apps.py
src/iam/controllers/: user.py
src/iam/migrations/: 0001_initial.py  0002_remove_user_phone_number.py
src/iam/models/: user.py
src/iam/schemas/: __init__.py  token.py  user.py
src/iam/use_cases/: __init__.py  update_points_use_case.py
src/order/: admin.py  apps.py
src/order/controllers/: __init__.py  order.py  order_item.py
src/order/migrations/: 0001_initial.py  0002_rename_shipping_address_order_address.py
src/order/models/: order.py  order_item.py
src/order/schemas/: __init__.py  order.py  order_item.py
src/product/: admin.py  apps.py
src/product/controllers/: product.py
src/product/management/commands/: create_random_products.py
src/product/migrations/: 0001_initial.py  0002_product_presentation.py  0003_product_quantity_reviews_product_rating.py  0004_alter_product_rating.py
src/product/models/: product.py
src/product/schemas/: product.py
src/product/signals/receivers/: __init__.py  remove_image_from_s3.py  update_rating_and_num_reviews.py
src/product/use_cases/: update_rating_and_reviews_number_use_case.py
src/review/: admin.py  apps.py
src/review/controllers/: review.py
src/review/management/commands/: create_random_reviews.py
src/review/migrations/: 0001_initial.py
src/review/models/: review.py
src/review/schemas/: review.py
src/sales/: admin.py  apps.py
src/sales/controllers/: __init__.py  order.py
src/sales/migrations/: 0001_initial.py  0002_address_phone_number.py  0003_remove_order_address_delete_address.py  0004_alter_order_user.py  0005_alter_orderitem_order_alter_orderitem_product.py
src/sales/models/: __init__.py  address.py  order.py  order_item.py
src/sales/schemas/: __init__.py  address.py  order.py  order_item.py
src/sales/use_cases/: __init__.py  create_order_use_case.py
tests/: test_order_controller.py  test_product_controller.py  test_review_controller.py  test_user_controller.py  utils.py
